kubernetes/template.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: drive
  labels:
    app: drive
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drive
  template:
    metadata:
      labels:
        app: drive
    spec:
      containers:
        - name: drive
          image: username/drive:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: indexer
  labels:
    app: indexer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: indexer
  template:
    metadata:
      labels:
        app: indexer
    spec:
      containers:
        - name: indexer
          image: username/indexer:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: video processing
  labels:
    app: video processing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: video processing
  template:
    metadata:
      labels:
        app: video processing
    spec:
      containers:
        - name: video processing
          image: username/video processing:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification
  labels:
    app: notification
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
        - name: notification
          image: username/notification:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5


---


apiVersion: v1
kind: Service
metadata:
  name: drive
  labels:
    app: drive
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: drive


---


apiVersion: v1
kind: Service
metadata:
  name: indexer
  labels:
    app: indexer
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: indexer


---


apiVersion: v1
kind: Service
metadata:
  name: video processing
  labels:
    app: video processing
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: video processing


---


apiVersion: v1
kind: Service
metadata:
  name: notification
  labels:
    app: notification
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: notification
